# tensor_train

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  Makefile  README.md  config.mk  submodule_workflow.md
bind_py/: CMakeLists.txt  tt_bindings.cpp
bind_py/tensor_train/: __init__.py
bind_py/tests/: __init__.py  test_smoke.py
bind_py/usage/: demo_2d_compress.py
docs/: Doxyfile  conf.py  index.rst  requirements.txt  usage.rst
docs/api/: detail.rst  public.rst  python.rst  types.rst
include/: tensor_train.hpp
include/core/algebra/: tt_eval.hpp  tt_inner.hpp  tt_matrix_frob_norm_apply.hpp  tt_matrix_inner.hpp  tt_matrix_ops.hpp  tt_ops.hpp
include/core/apply/: tt_matrix_apply.hpp
include/core/types/: tt.hpp  (+3 more)
tests/bench/: bench_streaming_matvec.cpp  bench_tt_matrix_apply.cpp  bench_tt_round.cpp  bench_tt_round_methods.cpp  tt_bench_utils.hpp
tests/bind_py/: demo_compress.py  test_bindings.py  test_from_samples.py  test_roundtrip.py  test_smoke.py  test_tt_matrix_bindings.py
tests/core/: test_tt_core.cpp  test_tt_cross.cpp  test_tt_cross_direct.cpp  test_tt_eval.cpp  test_tt_factory.cpp  test_tt_fused_apply_core.cpp  test_tt_invariants.cpp  test_tt_matrix.cpp  test_tt_matrix_apply.cpp  test_tt_matrix_apply_round.cpp  test_tt_matrix_factory.cpp  test_tt_matrix_frob_norm_apply.cpp  test_tt_matrix_ops.cpp  test_tt_matrix_round.cpp  test_tt_matvec_round.cpp  test_tt_ops.cpp  test_tt_orthogonalize.cpp  test_tt_qtt_from_dense.cpp  test_tt_round.cpp  test_tt_soft_threshold.cpp  test_tt_stress.cpp  test_tt_svd.cpp  test_tt_validation.cpp  tt_test_utils.hpp
(+42 files in other folders)
